@@ -1202,6 +1202,7 @@ Thenault Sylvain
 Péter Szabó
 Amir Szekely
 Arfrever Frehtes Taifersar Arahesis
+Indra Talip
 Neil Tallim
 Geoff Talvola
 Musashi Tamura
