@@ -222,6 +222,9 @@ IDLE
 Tests
 -----
 
+- Issue #15494: test.support is now a package rather than a module (Initial
+  patch by Indra Talip)
+
 - Issue #17944: test_zipfile now discoverable and uses subclassing to
   generate tests for different compression types.  Fixed a bug with skipping
   some tests due to use of exhausted iterators.
